--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,5 @@
     <string name="username_cant_empty">Username can\'t be empty</string>
     <string name="password_cant_empty">Password can\'t be empty</string>
     <string name="password_musthave_min">Password must have minimum 6 characters</string>
+    <string name="check_interent">Please check your internet connection</string>
 </resources>
