--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="password_musthave_min">Password must have minimum 6 characters</string>
     <string name="check_interent">Please check your internet connection</string>
     <string name="server_error">Server Error</string>
+    <string name="no_data_found">No Data Found</string>
 </resources>
