--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,5 +150,5 @@
     <string name="server_error">Server Error</string>
     <string name="no_data_found">No Data Found</string>
     <string name="done"><u>Done</u></string>
-    <string name="shipmentID">Shipment ID </string>
+    <string name="shipmentID">Shipment ID: </string>
 </resources>
