change language Login remember me functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Safari Trans</string>
-    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
-    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
-    <string name="ok" translatable="false">OK</string>
-    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
-    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
-    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
-    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
-    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
-    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
-    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
-    <string name="download_error" translatable="false">Download error</string>
-    <string name="start_over" translatable="false">Start over</string>
+    <string name="app_name">Safari Trans</string>
+    <string name="ok">OK</string>
+    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
+    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
+    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
     <string name="menu_item_settings" translatable="false">Settings</string>
     <string name="select_image" translatable="false">Select image</string>
     <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
 
     <!-- Settings related strings. -->
     <string name="pref_screen" translatable="false">ps</string>
-    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
-    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
-    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
-    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
     <string name="pref_category_info" translatable="false">Detection Info</string>
     <string name="pref_category_face_detection" translatable="false">Face Detection</string>
     <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
-    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
     <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
     <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
 
@@ -151,4 +138,7 @@
     <string name="no_data_found">No Data Found</string>
     <string name="done"><u>Done</u></string>
     <string name="shipmentID">Shipment ID: </string>
+    <string name="english">English</string>
+    <string name="french">Francais</string>
+    <string name="forgot_password">Forgot Password?</string>
 </resources>
