--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,7 @@
     <string name="counter">Counter</string>
     <string name="no_code_scanned">No Code Scanned</string>
     <string name="change_language">Change Language</string>
+    <string name="select_language">Select Language</string>
     <string name="logout">Logout</string>
 
 </resources>
